tests/org.eclipse.php.core.tests/workspace/errors/php5/unfinishedMethodDecl3.pdtt
--TEST--
Test unfinished method declaration error reporting
--FILE--
<?php
function foo(A) {}
?>
--EXPECT--
[line=2, start=20, end=21] syntax error, unexpected ')', expecting 'variable' or '&'